--- a/todoList/src/main/resources/messages.properties
+++ b/todoList/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 validation.content=\uB0B4\uC6A9\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
 validation.date=\uB0A0\uC9DC\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 validation.time=\uC2DC\uAC04\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
+validation.importance=\uC911\uC694\uB3C4\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
