--- a/todoList/src/main/resources/messages.properties
+++ b/todoList/src/main/resources/messages.properties
@@ -3,3 +3,8 @@ validation.date=\uB0A0\uC9DC\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 validation.time=\uC2DC\uAC04\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
 validation.importance=\uC911\uC694\uB3C4\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 validation.searchType=\uAC80\uC0C9\uC870\uAC74\uC744 \uC120\uD0DD\uD574\uC8FC\uC138\uC694.
+
+validation.member.name=\uC774\uB984\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
+validation.member.username=\uC544\uC774\uB514\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
+validation.member.password=\uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
+validation.member.email=\uC774\uBA54\uC77C\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
