--- a/todoList/src/main/resources/messages.properties
+++ b/todoList/src/main/resources/messages.properties
@@ -4,6 +4,7 @@ validation.time=\uC2DC\uAC04\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
 validation.importance=\uC911\uC694\uB3C4\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 validation.searchType=\uAC80\uC0C9\uC870\uAC74\uC744 \uC120\uD0DD\uD574\uC8FC\uC138\uC694.
 validation.size=\uAC00\uB2A5\uD55C \uAE38\uC774\uB294 {min} ~ {max}\uC790 \uC785\uB2C8\uB2E4.
+validation.category=\uCE74\uD14C\uACE0\uB9AC\uB97C \uC120\uD0DD\uD574\uC8FC\uC138\uC694.
 
 validation.member.name=\uC774\uB984\uC740 \uD55C\uAE00 \uBC0F \uC601\uBB38\uB9CC \uC785\uB825 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
 validation.member.username=\uC544\uC774\uB514\uB294 \uC601\uBB38 \uBC0F \uC22B\uC790\uB9CC \uC785\uB825\uAC00\uB2A5\uD569\uB2C8\uB2E4.
